added translation to timer start button and timer stop function

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h1><span id="timer.output">0</span> <i18n key="timer.unit">Sek.</i18n></h1>
                 </div>
                 <div class="w3-container w3-padding">
-                    <button class="w3-button w3-blue class w3-round-xlarge" id="timer.start">Start</button>
+                    <button class="w3-button w3-blue class w3-round-xlarge" id="timer.start"><i18n key="timer.start">start</i18n></button>
                 </div>
                 <audio id="timer.audio" src="bell.mp3"></audio>
             </div>
