added bell sound to stop button

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="w3-container w3-padding">
                     <button class="w3-button w3-blue class w3-round-xlarge" id="timer.start" data-action="start"><i18n key="timer.start">start</i18n></button>
                 </div>
-                <audio id="timer.audio" src="bell.mp3"></audio>
+                <audio id="timer.audio" preload="auto" src="bell.mp3"></audio>
             </div>
         </article>
         
